syntax = "proto3";

package cline;
option java_package = "bot.cline.proto";
option java_multiple_files = true;

import "cline/common.proto";

service OcaService {
    // Handles the oracle sso user clicking the login link in the UI.
    // and opens the authentication URL in the external browser.
    rpc ocaLoginClicked(EmptyRequest) returns (Empty);

    // Handles the token refresh for the access token.
    rpc ocaRefreshToken(EmptyRequest) returns (Empty);

    // Handles the user clicking the logout button in the UI.
    // Clears API keys and user state.
    rpc ocaLogoutClicked(EmptyRequest) returns (Empty);

    // Survey Api
    rpc ocaStartSurveyProxySurvey(EmptyRequest) returns (PortResponse);
    rpc ocaStopSurveyProxySurvey(EmptyRequest) returns (Empty);
    rpc ocaGenerateSurveyHtml(GenerateSurveyHtmlRequest) returns (GenerateSurveyHtmlResponse);
}

message GenerateSurveyHtmlRequest {
  optional string survey_html = 1;
  string survey_id = 2;
  string model_id = 3;
  string client = 4;
  string client_version = 5;
}
message GenerateSurveyHtmlResponse {
  string file_path = 1;   // Absolute path to temp file (optional, for debugging)
  string url = 2;         // URL to fetch HTML, if relevant (e.g. http://localhost:xxx/survey)
}
// Model parameter/configuration details (like litellm_params)
message ModelParams {
  string model = 1;
  int64 max_tokens = 2;
}
message PortResponse {
  int32 port = 1;
}
